style: change gap in container-album responsive 992px  and fixed scrollbar

--- a/day-2/css/responsive.css
+++ b/day-2/css/responsive.css
@@ -111,8 +111,7 @@
   .container-album {
     display: flex;
     flex-wrap: nowrap;
-    gap: 15px;
-    margin-top: 40px;
+    gap: 10px;
   }
 
   .container-album .album {
